logs/nuts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nuts'...
Listing './lib/python3.5/site-packages/nuts/application'...
Listing './lib/python3.5/site-packages/nuts/data'...
Listing './lib/python3.5/site-packages/nuts/service'...
Listing './lib/python3.5/site-packages/nuts-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pepper'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyaml'...
Listing './lib/python3.5/site-packages/pyaml/tests'...
Listing './lib/python3.5/site-packages/pyaml-17.12.1.dist-info'...
Listing './lib/python3.5/site-packages/pykwalify'...
Listing './lib/python3.5/site-packages/pykwalify-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/salt_pepper-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
